@@ -674,6 +674,29 @@ name|k
 operator|++
 control|)
 block|{
+name|String
+name|mappedDependency
+init|=
+name|evaluateCondition
+argument_list|(
+name|depConfs
+index|[
+name|k
+index|]
+operator|.
+name|trim
+argument_list|()
+argument_list|,
+name|dd
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|mappedDependency
+operator|!=
+literal|null
+condition|)
+block|{
 name|dd
 operator|.
 name|addDependencyConfiguration
@@ -686,15 +709,10 @@ operator|.
 name|trim
 argument_list|()
 argument_list|,
-name|depConfs
-index|[
-name|k
-index|]
-operator|.
-name|trim
-argument_list|()
+name|mappedDependency
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 block|}
 else|else
@@ -859,6 +877,300 @@ name|useDefaultMappingToGuessRightOperande
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+comment|/**          * Evaluate the optional condition in the given configuration, like "[org=MYORG]confX".          * If the condition evaluates to true, the configuration is returned, if the condition          * evaluatate to false, null is returned.          * If there are no conditions, the configuration itself is returned.          *  		 * @param conf the configuration to evaluate 		 * @param dd the dependencydescriptor to which the configuration will be added 		 * @return the evaluated condition 		 */
+specifier|private
+name|String
+name|evaluateCondition
+parameter_list|(
+name|String
+name|conf
+parameter_list|,
+name|DefaultDependencyDescriptor
+name|dd
+parameter_list|)
+block|{
+if|if
+condition|(
+name|conf
+operator|.
+name|charAt
+argument_list|(
+literal|0
+argument_list|)
+operator|!=
+literal|'['
+condition|)
+block|{
+return|return
+name|conf
+return|;
+block|}
+name|int
+name|endConditionIndex
+init|=
+name|conf
+operator|.
+name|indexOf
+argument_list|(
+literal|']'
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|endConditionIndex
+operator|==
+operator|-
+literal|1
+condition|)
+block|{
+name|addError
+argument_list|(
+literal|"invalid conf "
+operator|+
+name|conf
+operator|+
+literal|" for "
+operator|+
+name|dd
+operator|.
+name|getDependencyRevisionId
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+name|String
+name|condition
+init|=
+name|conf
+operator|.
+name|substring
+argument_list|(
+literal|1
+argument_list|,
+name|endConditionIndex
+argument_list|)
+decl_stmt|;
+name|int
+name|notEqualIndex
+init|=
+name|condition
+operator|.
+name|indexOf
+argument_list|(
+literal|"!="
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|notEqualIndex
+operator|==
+operator|-
+literal|1
+condition|)
+block|{
+name|int
+name|equalIndex
+init|=
+name|condition
+operator|.
+name|indexOf
+argument_list|(
+literal|'='
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|equalIndex
+operator|==
+operator|-
+literal|1
+condition|)
+block|{
+name|addError
+argument_list|(
+literal|"invalid conf "
+operator|+
+name|conf
+operator|+
+literal|" for "
+operator|+
+name|dd
+operator|.
+name|getDependencyRevisionId
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+name|String
+name|leftOp
+init|=
+name|condition
+operator|.
+name|substring
+argument_list|(
+literal|0
+argument_list|,
+name|equalIndex
+argument_list|)
+operator|.
+name|trim
+argument_list|()
+decl_stmt|;
+name|String
+name|rightOp
+init|=
+name|condition
+operator|.
+name|substring
+argument_list|(
+name|equalIndex
+operator|+
+literal|1
+argument_list|)
+operator|.
+name|trim
+argument_list|()
+decl_stmt|;
+comment|// allow organisation synonyms, like 'org' or 'organization'
+if|if
+condition|(
+name|leftOp
+operator|.
+name|equals
+argument_list|(
+literal|"org"
+argument_list|)
+operator|||
+name|leftOp
+operator|.
+name|equals
+argument_list|(
+literal|"organization"
+argument_list|)
+condition|)
+block|{
+name|leftOp
+operator|=
+literal|"organisation"
+expr_stmt|;
+block|}
+name|String
+name|attrValue
+init|=
+name|dd
+operator|.
+name|getAttribute
+argument_list|(
+name|leftOp
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+operator|!
+name|rightOp
+operator|.
+name|equals
+argument_list|(
+name|attrValue
+argument_list|)
+condition|)
+block|{
+return|return
+literal|null
+return|;
+block|}
+block|}
+else|else
+block|{
+name|String
+name|leftOp
+init|=
+name|condition
+operator|.
+name|substring
+argument_list|(
+literal|0
+argument_list|,
+name|notEqualIndex
+argument_list|)
+operator|.
+name|trim
+argument_list|()
+decl_stmt|;
+name|String
+name|rightOp
+init|=
+name|condition
+operator|.
+name|substring
+argument_list|(
+name|notEqualIndex
+operator|+
+literal|2
+argument_list|)
+operator|.
+name|trim
+argument_list|()
+decl_stmt|;
+comment|// allow organisation synonyms, like 'org' or 'organization'
+if|if
+condition|(
+name|leftOp
+operator|.
+name|equals
+argument_list|(
+literal|"org"
+argument_list|)
+operator|||
+name|leftOp
+operator|.
+name|equals
+argument_list|(
+literal|"organization"
+argument_list|)
+condition|)
+block|{
+name|leftOp
+operator|=
+literal|"organisation"
+expr_stmt|;
+block|}
+name|String
+name|attrValue
+init|=
+name|dd
+operator|.
+name|getAttribute
+argument_list|(
+name|leftOp
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|rightOp
+operator|.
+name|equals
+argument_list|(
+name|attrValue
+argument_list|)
+condition|)
+block|{
+return|return
+literal|null
+return|;
+block|}
+block|}
+return|return
+name|conf
+operator|.
+name|substring
+argument_list|(
+name|endConditionIndex
+operator|+
+literal|1
+argument_list|)
+return|;
 block|}
 specifier|private
 name|void
